[gd_scene load_steps=21 format=3 uid="uid://ca0ofo74p5we4"]

[ext_resource type="Texture2D" uid="uid://c1c0hbjgbbtnl" path="res://menus/character_creator/menu_palette.png" id="2_0fqbj"]
[ext_resource type="PackedScene" uid="uid://cd27yl8tl5qd6" path="res://player_character/character.tscn" id="2_6d3b8"]
[ext_resource type="Theme" uid="uid://bv4urn83158ba" path="res://UI/theme/RoboTheme.tres" id="5_4ciyq"]
[ext_resource type="Script" path="res://menus/lobby/lobby_character_customizer.gd" id="5_h4pye"]
[ext_resource type="PackedScene" uid="uid://c5g77somkggcq" path="res://UI/buttons/dec.tscn" id="6_f72pg"]
[ext_resource type="Shader" path="res://UI/shader/palette_swap.gdshader" id="6_rcmc8"]
[ext_resource type="Texture2D" uid="uid://00et7mgdndui" path="res://player_character/base_color_palette.png" id="7_646sm"]
[ext_resource type="PackedScene" uid="uid://cbjorljnfyjlt" path="res://UI/buttons/inc.tscn" id="7_yercm"]
[ext_resource type="Shader" path="res://player_character/character_face.gdshader" id="8_hvyq6"]
[ext_resource type="Texture2D" uid="uid://br3114oxyqbrh" path="res://player_character/face_displacement_map.png" id="9_ewlph"]
[ext_resource type="Texture2D" uid="uid://bw335sbq0nqxa" path="res://player_character/face_base_color_palette.png" id="10_0fgjq"]
[ext_resource type="Texture2D" uid="uid://ch5uqrjjbkqdi" path="res://UI/theme/box.png" id="12_1tuyl"]
[ext_resource type="Texture2D" uid="uid://byx1a3xtgp4am" path="res://UI/word_art/#.png" id="13_iy8pe"]
[ext_resource type="Script" path="res://menus/lobby/gamepad_cursor.gd" id="14_satqh"]
[ext_resource type="Script" path="res://menus/lobby/gamepad_UI_binding.gd" id="15_2qbew"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m4yiq"]
resource_local_to_scene = true
shader = ExtResource("6_rcmc8")
shader_parameter/Max_types = 8
shader_parameter/Type = 0
shader_parameter/palett = ExtResource("2_0fqbj")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hfxrk"]
resource_local_to_scene = true
shader = ExtResource("6_rcmc8")
shader_parameter/Max_types = 8
shader_parameter/Type = 7
shader_parameter/palett = ExtResource("7_646sm")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_owlxl"]
resource_local_to_scene = true
shader = ExtResource("8_hvyq6")
shader_parameter/Max_types = 8
shader_parameter/Type = 0
shader_parameter/displacement_strength = 0.0
shader_parameter/opacity = 1.0
shader_parameter/displacement_map_size = Vector2i(12, 9)
shader_parameter/palett = ExtResource("10_0fgjq")
shader_parameter/displacement_map = ExtResource("9_ewlph")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_oi60r"]
resource_local_to_scene = true
shader = ExtResource("6_rcmc8")
shader_parameter/Max_types = 8
shader_parameter/Type = 6
shader_parameter/palett = ExtResource("7_646sm")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qdfhl"]
resource_local_to_scene = true
shader = ExtResource("6_rcmc8")
shader_parameter/Max_types = 8
shader_parameter/Type = 7
shader_parameter/palett = ExtResource("7_646sm")

[node name="LobbyCharacterCustomizer" type="PanelContainer" node_paths=PackedStringArray("player_tag", "example_character_0", "example_character_1", "example_character_2", "example_character_3", "panel_content", "ready_overlay", "player_name", "gamepad_cursor", "body_color_txt", "body_txt", "face_color_txt", "face_custom_txt", "face_number_txt")]
process_mode = 1
material = SubResource("ShaderMaterial_m4yiq")
custom_minimum_size = Vector2(144, 128)
offset_right = 6.0
offset_bottom = 11.0
theme = ExtResource("5_4ciyq")
script = ExtResource("5_h4pye")
player_tag = NodePath("Control/Panel/Label")
example_character_0 = NodePath("CenterContainer/VBoxContainer/HBoxContainer/Body/Control/Character")
example_character_1 = NodePath("CenterContainer/VBoxContainer/HBoxContainer/Body/Control/Character2")
example_character_2 = NodePath("CenterContainer/NinePatchRect/Control/Character")
example_character_3 = NodePath("CenterContainer/NinePatchRect/Control/Character2")
panel_content = NodePath("CenterContainer/VBoxContainer")
ready_overlay = NodePath("CenterContainer/NinePatchRect")
player_name = NodePath("Control")
gamepad_cursor = NodePath("GamepadCursor")
body_color_txt = NodePath("CenterContainer/VBoxContainer/HBoxContainer/Body/BodyColor/HBoxContainer/Label")
body_txt = NodePath("CenterContainer/VBoxContainer/HBoxContainer/Body/BodyBase/HBoxContainer/Label")
face_color_txt = NodePath("CenterContainer/VBoxContainer/HBoxContainer/Face/FaceColor/HBoxContainer/Label")
face_custom_txt = NodePath("CenterContainer/VBoxContainer/HBoxContainer/Face/FacePreset/HBoxContainer/Label")
face_number_txt = NodePath("CenterContainer/VBoxContainer/HBoxContainer/Face/FaceType/HBoxContainer/Label")
metadata/_edit_lock_ = true

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme_override_constants/separation = 9
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2
alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Body" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 2
alignment = 1

[node name="BodyBase" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/Body"]
layout_mode = 2
theme_override_constants/separation = 1
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/Body/BodyBase"]
layout_mode = 2
size_flags_horizontal = 4
text = "Body "
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/Body/BodyBase"]
layout_mode = 2
theme_override_constants/separation = 2
alignment = 1

[node name="Dec" parent="CenterContainer/VBoxContainer/HBoxContainer/Body/BodyBase/HBoxContainer" instance=ExtResource("6_f72pg")]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/Body/BodyBase/HBoxContainer"]
layout_mode = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Inc" parent="CenterContainer/VBoxContainer/HBoxContainer/Body/BodyBase/HBoxContainer" instance=ExtResource("7_yercm")]
layout_mode = 2

[node name="BodyColor" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/Body"]
layout_mode = 2
theme_override_constants/separation = 1
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/Body/BodyColor"]
layout_mode = 2
size_flags_horizontal = 4
text = "Body Clr"
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/Body/BodyColor"]
layout_mode = 2
theme_override_constants/separation = 2
alignment = 1

[node name="Dec" parent="CenterContainer/VBoxContainer/HBoxContainer/Body/BodyColor/HBoxContainer" instance=ExtResource("6_f72pg")]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/Body/BodyColor/HBoxContainer"]
layout_mode = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Inc" parent="CenterContainer/VBoxContainer/HBoxContainer/Body/BodyColor/HBoxContainer" instance=ExtResource("7_yercm")]
layout_mode = 2

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer/HBoxContainer/Body"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Character" parent="CenterContainer/VBoxContainer/HBoxContainer/Body/Control" instance=ExtResource("2_6d3b8")]
position = Vector2(-16, 25)
disabled = true

[node name="Body" parent="CenterContainer/VBoxContainer/HBoxContainer/Body/Control/Character/Visuals" index="0"]
material = SubResource("ShaderMaterial_hfxrk")

[node name="Face" parent="CenterContainer/VBoxContainer/HBoxContainer/Body/Control/Character/Visuals" index="1"]
material = SubResource("ShaderMaterial_owlxl")

[node name="ReticleSprite" parent="CenterContainer/VBoxContainer/HBoxContainer/Body/Control/Character/Visuals/ZeusReticle" index="0"]
material = SubResource("ShaderMaterial_oi60r")

[node name="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/Body/Control/Character" index="11"]
material = SubResource("ShaderMaterial_qdfhl")

[node name="Character2" parent="CenterContainer/VBoxContainer/HBoxContainer/Body/Control" instance=ExtResource("2_6d3b8")]
position = Vector2(16, 25)
disabled = true

[node name="Face" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 2
alignment = 1

[node name="FacePreset" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/Face"]
layout_mode = 2
theme_override_constants/separation = 1
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/Face/FacePreset"]
layout_mode = 2
size_flags_horizontal = 4
text = "Face"
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/Face/FacePreset"]
layout_mode = 2
theme_override_constants/separation = 1
alignment = 1

[node name="Dec" parent="CenterContainer/VBoxContainer/HBoxContainer/Face/FacePreset/HBoxContainer" instance=ExtResource("6_f72pg")]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/Face/FacePreset/HBoxContainer"]
custom_minimum_size = Vector2(29, 0)
layout_mode = 2
text = "DEF"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Inc" parent="CenterContainer/VBoxContainer/HBoxContainer/Face/FacePreset/HBoxContainer" instance=ExtResource("7_yercm")]
layout_mode = 2

[node name="FaceType" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/Face"]
layout_mode = 2
theme_override_constants/separation = 1
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/Face/FaceType"]
layout_mode = 2
size_flags_horizontal = 4
text = "Face Num"
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/Face/FaceType"]
layout_mode = 2
theme_override_constants/separation = 2
alignment = 1

[node name="Dec" parent="CenterContainer/VBoxContainer/HBoxContainer/Face/FaceType/HBoxContainer" instance=ExtResource("6_f72pg")]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/Face/FaceType/HBoxContainer"]
custom_minimum_size = Vector2(14, 0)
layout_mode = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Inc" parent="CenterContainer/VBoxContainer/HBoxContainer/Face/FaceType/HBoxContainer" instance=ExtResource("7_yercm")]
layout_mode = 2

[node name="FaceColor" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/Face"]
layout_mode = 2
theme_override_constants/separation = 1
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/Face/FaceColor"]
layout_mode = 2
size_flags_horizontal = 4
text = "Face Clr"
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/Face/FaceColor"]
layout_mode = 2
theme_override_constants/separation = 2
alignment = 1

[node name="Dec" parent="CenterContainer/VBoxContainer/HBoxContainer/Face/FaceColor/HBoxContainer" instance=ExtResource("6_f72pg")]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/Face/FaceColor/HBoxContainer"]
layout_mode = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Inc" parent="CenterContainer/VBoxContainer/HBoxContainer/Face/FaceColor/HBoxContainer" instance=ExtResource("7_yercm")]
layout_mode = 2

[node name="Ready" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "READY "

[node name="NinePatchRect" type="Panel" parent="CenterContainer"]
visible = false
custom_minimum_size = Vector2(128, 40)
layout_mode = 2
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer/NinePatchRect"]
layout_mode = 2
offset_top = 7.0
offset_right = 128.0
offset_bottom = 40.0
bbcode_enabled = true
text = "[center]
[wave amp=25
.0 freq=5.0 connected=1][rainbow freq=1.0 sat=0.8 val=1.0]READY[/rainbow][/wave][/center]"
metadata/_edit_lock_ = true

[node name="Control" type="Control" parent="CenterContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.0
offset_top = -20.0
offset_right = -76.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Character" parent="CenterContainer/NinePatchRect/Control" instance=ExtResource("2_6d3b8")]
position = Vector2(44, 27)
disabled = true

[node name="Character2" parent="CenterContainer/NinePatchRect/Control" instance=ExtResource("2_6d3b8")]
position = Vector2(106, 27)
disabled = true

[node name="Control" type="Control" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="Panel" type="NinePatchRect" parent="Control"]
material = SubResource("ShaderMaterial_m4yiq")
custom_minimum_size = Vector2(94, 24)
layout_mode = 0
offset_left = 17.0
offset_top = -20.0
offset_right = 34.0
offset_bottom = 4.0
texture = ExtResource("12_1tuyl")
patch_margin_left = 8
patch_margin_top = 10
patch_margin_right = 7
patch_margin_bottom = 3

[node name="Label" type="Label" parent="Control/Panel"]
layout_mode = 2
offset_left = 3.0
offset_top = 8.0
offset_right = 91.0
offset_bottom = 21.0
text = "Player"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="UIMarkers" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="UIMarkers"]
position = Vector2(11, 35)

[node name="Marker2D2" type="Marker2D" parent="UIMarkers"]
position = Vector2(11, 63)

[node name="Marker2D3" type="Marker2D" parent="UIMarkers"]
position = Vector2(137, 34)

[node name="Marker2D4" type="Marker2D" parent="UIMarkers"]
position = Vector2(130, 62)

[node name="Marker2D5" type="Marker2D" parent="UIMarkers"]
position = Vector2(127, 90)

[node name="GamepadCursor" type="Sprite2D" parent="." node_paths=PackedStringArray("list_of_options")]
texture = ExtResource("13_iy8pe")
script = ExtResource("14_satqh")
list_of_options = [NodePath("Bodybase"), NodePath("Bodycolor"), NodePath("Facecustom"), NodePath("Facenum"), NodePath("Facecolor")]

[node name="Bodybase" type="Node" parent="GamepadCursor" node_paths=PackedStringArray("option", "L_button", "R_button", "position_marker")]
script = ExtResource("15_2qbew")
option = NodePath("../../CenterContainer/VBoxContainer/HBoxContainer/Body/BodyBase/HBoxContainer")
L_button = NodePath("../../CenterContainer/VBoxContainer/HBoxContainer/Body/BodyBase/HBoxContainer/Dec")
R_button = NodePath("../../CenterContainer/VBoxContainer/HBoxContainer/Body/BodyBase/HBoxContainer/Inc")
position_marker = NodePath("../../UIMarkers/Marker2D")

[node name="Bodycolor" type="Node" parent="GamepadCursor" node_paths=PackedStringArray("option", "L_button", "R_button", "position_marker")]
script = ExtResource("15_2qbew")
option = NodePath("../../CenterContainer/VBoxContainer/HBoxContainer/Body/BodyColor/HBoxContainer")
L_button = NodePath("../../CenterContainer/VBoxContainer/HBoxContainer/Body/BodyColor/HBoxContainer/Dec")
R_button = NodePath("../../CenterContainer/VBoxContainer/HBoxContainer/Body/BodyColor/HBoxContainer/Inc")
position_marker = NodePath("../../UIMarkers/Marker2D2")

[node name="Facecustom" type="Node" parent="GamepadCursor" node_paths=PackedStringArray("option", "L_button", "R_button", "position_marker")]
script = ExtResource("15_2qbew")
option = NodePath("../../CenterContainer/VBoxContainer/HBoxContainer/Face/FacePreset/HBoxContainer")
L_button = NodePath("../../CenterContainer/VBoxContainer/HBoxContainer/Face/FacePreset/HBoxContainer/Dec")
R_button = NodePath("../../CenterContainer/VBoxContainer/HBoxContainer/Face/FacePreset/HBoxContainer/Inc")
position_marker = NodePath("../../UIMarkers/Marker2D3")

[node name="Facenum" type="Node" parent="GamepadCursor" node_paths=PackedStringArray("option", "L_button", "R_button", "position_marker")]
script = ExtResource("15_2qbew")
option = NodePath("../../CenterContainer/VBoxContainer/HBoxContainer/Face/FaceType/HBoxContainer")
L_button = NodePath("../../CenterContainer/VBoxContainer/HBoxContainer/Face/FaceType/HBoxContainer/Dec")
R_button = NodePath("../../CenterContainer/VBoxContainer/HBoxContainer/Face/FaceType/HBoxContainer/Inc")
position_marker = NodePath("../../UIMarkers/Marker2D4")

[node name="Facecolor" type="Node" parent="GamepadCursor" node_paths=PackedStringArray("option", "L_button", "R_button", "position_marker")]
script = ExtResource("15_2qbew")
option = NodePath("../../CenterContainer/VBoxContainer/HBoxContainer/Face/FaceColor/HBoxContainer")
L_button = NodePath("../../CenterContainer/VBoxContainer/HBoxContainer/Face/FaceColor/HBoxContainer/Dec")
R_button = NodePath("../../CenterContainer/VBoxContainer/HBoxContainer/Face/FaceColor/HBoxContainer/Inc")
position_marker = NodePath("../../UIMarkers/Marker2D5")

[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/Body/BodyBase/HBoxContainer/Dec" to="." method="_on_bodytype_dec_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/Body/BodyBase/HBoxContainer/Inc" to="." method="_on_bodytype_inc_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/Body/BodyColor/HBoxContainer/Dec" to="." method="_on_bodycolor_dec_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/Body/BodyColor/HBoxContainer/Inc" to="." method="_on_bodycolor_inc_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/Face/FacePreset/HBoxContainer/Dec" to="." method="_on_facepreset_dec_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/Face/FacePreset/HBoxContainer/Inc" to="." method="_on_facepreset_inc_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/Face/FaceType/HBoxContainer/Dec" to="." method="_on_facetype_dec_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/Face/FaceType/HBoxContainer/Inc" to="." method="_on_facetype_inc_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/Face/FaceColor/HBoxContainer/Dec" to="." method="_on_facecolor_dec_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/Face/FaceColor/HBoxContainer/Inc" to="." method="_on_facecolor_inc_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Ready" to="." method="_on_ready_pressed"]

[editable path="CenterContainer/VBoxContainer/HBoxContainer/Body/Control/Character"]
